--- a/static/css/pages/_accounts.scss
+++ b/static/css/pages/_accounts.scss
@@ -196,6 +196,12 @@
 
 /** Reconciliation form styles **/
 
+.row-elements-alternating-colors {
+  li:nth-child(odd){
+
+  }
+}
+
 .reconcile-form .new span {
   max-width: 12em;
   display: inline-block;
@@ -204,4 +210,62 @@
 
 .reconcile-form .new {
   padding: 1em;
+}
+
+/** Temporary Even and Odd row styles **/
+.row-elements.row-elements-alternating-colors {
+
+  li.account-reconcile-transaction {
+	position: relative;
+	padding: 0.2em 0 0 1.5em;
+	border-bottom: 1px solid #aaa;
+  }
+
+  li:nth-child(odd) {
+	background: #eee;
+  }
+
+  li:nth-child(even) {
+	background: #fbfbfb;
+  }
+}
+
+.reconcile-form .account-reconcile-transaction .checkbox.manual {
+  float: left;
+  display: inline-block;
+  z-index: 999;
+  left: 0.25em;
+  position: absolute;
+  right: 0;
+  cursor: pointer;
+  top: 0.25em;
+}
+
+li.account-reconcile-transaction {
+  position: relative;
+  padding: 0.2em 0 0 1.5em;
+}
+
+.account-reconcile-transaction span {
+  min-width: 9%;
+  display: inline-block;
+}
+
+span.account-reconcile-transaction-description {
+  min-width: 50%;
+}
+
+span.account-reconcile-transaction-include {
+  float: left;
+}
+
+.account-reconcile-transaction.new {
+  span {
+	max-width: 9em;
+	display: inline-block;
+  }
+
+  span.account-reconcile-transaction-description {
+	min-width: 19em;
+  }
 }
